[package]
name = "squad_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.0", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
winapi = { version = "0.3.9", features = ["winuser"] }